--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 /* https://www.youtube.com/watch?v=m9OSBJaQTlM */
 body {
-    display: flex;
-    margin-top: 50px;
+    /* display: flex; */
+    margin-top: 10px;
     justify-content: center;
-    background-color: #9b929b;
+    background-color: #bdbaf5;
   }
   button {
     width: 75px;
@@ -18,14 +18,16 @@ body {
   
   #header {
     padding: 5px;
-    color: #db5353;
+    color: #ed6666;
     font-size: 40px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-style: oblique;
     display: flex;
     justify-content: space-between;
   }
   #header button {
-    background-color:#e66ad5;
+    background-color:#e66ad3;
   }
   #container {
     width: 770px;
@@ -38,6 +40,10 @@ body {
   #weekdays div {
     width: 100px;
     padding: 10px;
+    font-size: large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-style: oblique;
   }
   #calendar {
     width: 100%;
@@ -124,3 +130,58 @@ body {
     position: absolute;
     background-color: rgba(0,0,0,0.8);
   }
+
+  /* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #e9ca98;
+  padding: 10px 10px;
+  position: top center;
+}
+
+/* Style the header links */
+.header a {
+  float:left;
+  color: hsl(120, 100%, 25%);
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a.active {
+  background-color: rgb(225, 30, 255);
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
