--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,17 @@ body {
     border-radius: 5px;
     color: white;
   }
+
+  #AddReccuringEvents {
+    width: 200px;
+    cursor: pointer;
+    box-shadow: 0px 0px 2px gray;
+    border: none;
+    outline: none;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+  }
   
   #header {
     padding: 5px;
@@ -80,12 +91,21 @@ body {
     max-height: 55px;
     overflow: hidden;
   }
+  .RecEvent {
+    font-size: 10px;
+    padding: 3px;
+    background-color: #34c145;
+    color: white;
+    border-radius: 5px;
+    max-height: 55px;
+    overflow: hidden;
+  }
   .padding {
     cursor: default !important;
     background-color: #FFFCFF !important;
     box-shadow: none !important;
   }
-  #newEventModal, #deleteEventModal {
+  #newEventModal, #deleteEventModal, #reccuringEventsModal{
     display: none;
     z-index: 20;
     padding: 25px;
@@ -108,13 +128,13 @@ body {
     border: none;
     box-shadow: 0px 0px 3px gray;
   }
-  #eventTitleInput.error {
+  #eventTitleInput.error, #eventTitleInputRec.error, #eventDayRec.error {
     border: 2px solid red;
   }
-  #cancelButton, #deleteButton {
+  #cancelButton, #deleteButton, #saveButtonReccuringEvents {
     background-color: #d36c6c;
   }
-  #saveButton, #closeButton {
+  #saveButton, #closeButton, #cancelButtonReccuringEvents {
     background-color: #92a1d1;
   }
   #eventText {
