--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,6 +118,19 @@ body {
     position: absolute;
     font-family: sans-serif;
   }
+  #emailEventsModal{
+    display: none;
+    z-index: 20;
+    padding: 25px;
+    background-color: #e8f4fa;
+    box-shadow: 0px 0px 3px black;
+    border-radius: 5px;
+    width: 450px;
+    top: 100px;
+    left: calc(50% - 175px);
+    position: absolute;
+    font-family: sans-serif;
+  }
   #eventTitleInput {
     padding: 10px;
     width: 100%;
@@ -128,14 +141,37 @@ body {
     border: none;
     box-shadow: 0px 0px 3px gray;
   }
-  #eventTitleInput.error, #eventTitleInputRec.error, #eventDayRec.error {
+  #userEmail {
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 25px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 3px gray;
+  }
+  #emailBody {
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 25px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 3px gray;
+  }
+  #eventTitleInput.error, #eventTitleInputRec.error, #eventDayRec.error, #userEmail.error, #emailBody.error{
     border: 2px solid red;
   }
-  #cancelButton, #deleteButton, #saveButtonReccuringEvents {
+  #cancelButton, #deleteButton, #saveButtonReccuringEvents, #saveButtonEmail {
     background-color: #d36c6c;
   }
-  #saveButton, #closeButton, #cancelButtonReccuringEvents {
+  #saveButton, #closeButton, #cancelButtonReccuringEvents, #closeButtonEmail {
     background-color: #92a1d1;
+  }
+  #notifyButton{
+    background-color: #4a6ee5;
   }
   #eventText {
     font-size: 14px;
